[package]
name = "stun"
version = "0.1.0"
edition = "2021"

[dependencies]
hmac = { version = "0.12.1", optional = true }
sha1 = { version = "0.10.6", optional = true }
crc32fast = { version = "1.4.2", optional = true }
openssl = { version = "0.10.66", optional = true }

[features]
std = []
integrity = ["dep:sha1", "dep:hmac"]
integrity-openssl = ["dep:openssl"]
fingerprint = ["dep:crc32fast"]
default = ["std", "integrity", "fingerprint"]
