[package]
name = "stun"
version = "0.1.0"
edition = "2021"

[dependencies]
paste = "1.0.15"
crc = { version = "3.2.1", optional = true }
openssl = { version = "0.10.66", optional = true }

[features]
std = []
integrity = ["dep:openssl"]
fingerprint = ["dep:crc"]
default = ["std", "integrity", "fingerprint"]
