[package]
name = "stun"
version = "0.1.0"
edition = "2021"

[dependencies]
paste = "1.0.15"
crc = { version = "3.2.1", optional = true }
hmac = { version = "0.12.1", optional = true }
sha1 = { version = "0.10.6", optional = true }

[features]
std = []
integrity = ["dep:hmac", "dep:sha1"]
fingerprint = ["dep:crc"]
default = ["std", "integrity", "fingerprint"]
